<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.MainMenuFragment"
    android:background="@color/app_dark_primary">


    <TextView
        android:id="@+id/textview_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/appNameStr"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/app_primary_accent"
        android:textSize="60sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/newGameBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/newGameBtn"
        android:text="@string/newGameBtnTxt"
        android:textColor="@color/app_text_primary_light"
        android:backgroundTint="@color/app_primary_accent"
        android:layout_width="182dp"
        android:layout_height="61dp"
        app:layout_constraintBottom_toTopOf="@+id/loadBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_first"
        app:layout_constraintVertical_bias="0.5"/>

    <Button
        android:id="@+id/loadBtn"
        android:text="@string/loadBtnStr"
        app:layout_constraintBottom_toTopOf="@+id/exitBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newGameBtn"
        app:layout_constraintVertical_bias="0.5"
        android:textColor="@color/app_text_primary_light"
        android:layout_width="182dp"
        android:layout_height="61dp"
        android:backgroundTint="@color/app_primary_accent" />


    <Button
        android:id="@+id/exitBtn"
        android:text="@string/exitBtnTxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loadBtn"
        app:layout_constraintVertical_bias="0.5"
        android:textColor="@color/app_text_primary_light"
        android:layout_width="182dp"
        android:layout_height="61dp"
        android:backgroundTint="@color/app_primary_accent" />


</androidx.constraintlayout.widget.ConstraintLayout>